# character_recognition

./: CMakeLists.txt  main.c
data/: cinq.txt  neuf.txt  quatre.txt  sept.txt  six.txt  trois.txt
include/: mnist_lib.c  mnist_lib.h
result/: temp_plot.gp  temp_training_plot.gp
src/: perceptron-10classes.c  perceptron-10classes.h  perceptron-2classes-simple.c  perceptron-2classes-simple.h  perceptron-2classes-wh.c  perceptron-2classes-wh.h  perceptron-mnist.c  perceptron-mnist.h
